using UnityEngine;
using System.Collections;
public class PlayerTriggerReceiver : MonoBehaviour
{
    private PlayerRespawn respawn;
    private Animator anim;
    private MonoBehaviour[] allScripts;
     public float deathDelay = 3f;     // Ø²Ù…Ø§Ù† Ù‚Ø¨Ù„ Ø§Ø² Ù†Ù…Ø§ÛŒØ´ Ù¾Ù†Ù„ Ø¨Ø§Ø®Øª

    private void Awake()
    {
        anim = GetComponent<Animator>();
         allScripts = GetComponents<MonoBehaviour>();
        respawn = GetComponent<PlayerRespawn>();
    }

    private void OnTriggerEnter(Collider other)
    {
        // Ú¯Ø¯Ø§Ø²Ù‡
        if (other.CompareTag("Lava"))
        {
            // anim.SetTrigger("Die");
             OnDeath();
        }

        // Ú†Ú©â€ŒÙ¾ÙˆÛŒÙ†Øª
        if (other.CompareTag("Checkpoint"))
        {
            Checkpoint checkpoint = other.GetComponent<Checkpoint>();
            if (checkpoint != null)
                checkpoint.Activate(respawn);
        }
    }


 void OnDeath()
    {
        anim.SetFloat(Animator.StringToHash("inputX"), 0);
         anim.SetFloat(Animator.StringToHash("inputY"), 0);
        
        // ØªØ±ÛŒÚ¯Ø± Die Ø±Ø§ ÙØ¹Ø§Ù„ Ú©Ù†
        anim.SetTrigger("Die");
        
        // ØªÙ…Ø§Ù… Ø§Ø³Ú©Ø±ÛŒÙ¾Øªâ€ŒÙ‡Ø§ÛŒ Ø¯ÛŒÚ¯Ø± Ø±Ø§ ØºÛŒØ±ÙØ¹Ø§Ù„ Ú©Ù† (Ø¨Ø±Ø§ÛŒ Ù‡Ù…ÛŒØ´Ù‡)
        DisableOtherScriptsPermanently();
        
        // Ø¨Ø¹Ø¯ Ø§Ø² Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ù…Ø±Ú¯ØŒ Ù¾Ù†Ù„ Ø¨Ø§Ø®Øª Ø±Ø§ Ù†Ø´Ø§Ù† Ø¨Ø¯Ù‡
        StartCoroutine(ShowGameOverAfterDeath());
    }

     // ğŸ”§ ØºÛŒØ±ÙØ¹Ø§Ù„ Ú©Ø±Ø¯Ù† Ø¯Ø§Ø¦Ù…ÛŒ Ø³Ø§ÛŒØ± Ø§Ø³Ú©Ø±ÛŒÙ¾Øªâ€ŒÙ‡Ø§ (Ø¨Ø±Ø§ÛŒ Ù…Ø±Ú¯)
    void DisableOtherScriptsPermanently()
    {
        foreach (var script in allScripts)
        {
            // ÙÙ‚Ø· Health Ùˆ Ø§ÛŒÙ† Ø§Ø³Ú©Ø±ÛŒÙ¾Øª ÙØ¹Ø§Ù„ Ø¨Ù…Ø§Ù†Ù†Ø¯
            if (script != this )
            {
                script.enabled = false;
            }
        }
    }

     
    IEnumerator ShowGameOverAfterDeath()
    {
        Debug.Log("â³ Ù…Ù†ØªØ¸Ø± Ù¾Ø§ÛŒØ§Ù† Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ù…Ø±Ú¯...");
        
        // ØµØ¨Ø± Ú©Ù† ØªØ§ Ø§Ù†ÛŒÙ…ÛŒØ´Ù† Ù…Ø±Ú¯ Ú©Ø§Ù…Ù„ Ø´ÙˆØ¯
        yield return new WaitForSeconds(deathDelay);
        
        Debug.Log("ğŸ® Ù†Ù…Ø§ÛŒØ´ Ù¾Ù†Ù„ Ø¨Ø§Ø®Øª");
        
        // Ù¾Ù†Ù„ Ø¨Ø§Ø®Øª Ø±Ø§ Ù†Ø´Ø§Ù† Ø¨Ø¯Ù‡
        if (GameManager.Instance != null)
        {
            GameManager.Instance.ShowGameOver();
        }
        else
        {
            Debug.LogError("âŒ GameManager Ù¾ÛŒØ¯Ø§ Ù†Ø´Ø¯!");
        }
    }
}
